--- a/style.css
+++ b/style.css
@@ -1,24 +1,30 @@
-
-
 * {
-    box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   background: whitesmoke;
+  overflow-x: hidden;
 }
 
 .hero {
   width: 100%;
   height: 100vh;
-  display: flex;
+  position: relative;
+  overflow: hidden;
+}
+
+.back-video {
+  min-width: 100%;
+  min-height: 100%;
   position: absolute;
-  padding: 0 5%;
-  align-items: center;
-  justify-content: center;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .navbar {
@@ -51,38 +57,10 @@ body {
   transition: color 0.3s ease;
 }
 
-.back-video {
-  width: 100%;
-  height: 100vh;
-  display: block;
-  align-items: center;
-  padding: 10px;
-  margin: 20px;
-  position: relative;
-  z-index: -1;
-  border: none;
-  border-radius: 5px;
-}
-
-@media (min-aspect-ratio: 16/9){
-  .back-video{
-    width: 100%;
-    height: auto;
-  }
-}
-
-@media (max-aspect-ratio: 16/9){
-  .back-video{
-    width: auto;
-    height: 100%;
-  }
-}
-
-
 .container {
   max-width: 500px;
   width: 100%;
-  margin: 30%;
+  margin: 50px auto;
   background: whitesmoke;
   padding: 25px 30px;
   border-radius: 5px;
@@ -162,7 +140,7 @@ form .newsletter .category {
   background: #9b59b6;
 }
 
-form input[type="radio"]{
+form input[type='radio'] {
   display: none;
 }
 
@@ -191,27 +169,21 @@ form .button:hover {
 }
 
 @media (max-width: 584px) {
-  .container{
+  .container {
     max-width: 100%;
-
   }
   form .user-details .input-box {
-  margin-bottom: 15px;
-  width: 100%;
-
+    margin-bottom: 15px;
+    width: 100%;
   }
   form .newsletter .category {
-  width: 100%;
-
+    width: 100%;
   }
   .container form .user-details {
     max-height: 300px;
     overflow-y: scroll;
-
   }
   .user-details::-webkit-scrollbar {
     width: 0;
-
   }
 }
-
